--- a/index.html
+++ b/index.html
@@ -3949,7 +3949,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '3.2.3 '; // Altere este número para atualizar a versão
+    const APP_VERSION = '3.2.4 '; // Altere este número para atualizar a versão
 
     const CASH_BOX_INITIAL_VALUE = 1000;
     const SITE_CASH_BOX_INITIAL_VALUE = 5000;
@@ -10601,7 +10601,7 @@ async function calculateAndDisplayStoreRanking() {
                 clearTimeout(versionClickTimer);
                 versionClickCount++;
                 if (versionClickCount === 10) {
-                    window.location.href = 'https://www.youtube.com/watch?v=jBCRl7t8NeU';
+                    window.location.href = 'https://www.instagram.com/reel/DMUAByJMrvx/?igsh=bzRudHpzMWM1cnVr';
                     versionClickCount = 0;
                 } else {
                     versionClickTimer = setTimeout(() => {
