--- a/index.html
+++ b/index.html
@@ -2731,7 +2731,6 @@
                     <a href="#" class="modal-btn collaborator-link" data-name="Beatriz">Beatriz</a>
                     <a href="#" class="modal-btn collaborator-link" data-name="Marcio">Marcio</a>
                     <a href="#" class="modal-btn collaborator-link" data-name="Eliseu">Eliseu</a>
-                    <a href="#" class="modal-btn collaborator-link" data-name="Wedson">Wedson</a>
                 </div>
             </div>
             <div id="colaborador-bacabal" class="modal-view" style="display: none;">
@@ -3949,7 +3948,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '3.2.5 '; // Altere este número para atualizar a versão
+    const APP_VERSION = '3.2.6 '; // Altere este número para atualizar a versão
 
     const CASH_BOX_INITIAL_VALUE = 1000;
     const SITE_CASH_BOX_INITIAL_VALUE = 5000;
@@ -3984,13 +3983,13 @@ Transporte - R$ 5,00"></textarea></div>
     let countdownInterval = null; // Para controlar o timer da contagem regressiva
 
                 // --- ESTADO DA APLICAÇÃO ---
-    const allCollaborators = ['Beatriz', 'Marcio', 'Eliseu', 'Wedson', 'Natalia', 'Tacilio', 'Demilson', 'Leonardo'];
+    const allCollaborators = ['Beatriz', 'Marcio', 'Eliseu', 'Natalia', 'Tacilio', 'Demilson', 'Leonardo'];
     const newAdmins = ['Paulo', 'Keliane', 'Ducielma', 'Isabela'];
     const storeManagers = ['Beatriz', 'Natalia']; // NOVA LISTA: Apenas gerentes de loja
     const allUsers = [...allCollaborators, ...newAdmins]; // Lista unificada para funções genéricas
     const managers = [...storeManagers, ...newAdmins]; // Lista de todos com acesso GS
     const storeMapping = {
-        pinheiro: ['Beatriz', 'Marcio', 'Eliseu', 'Wedson'],
+        pinheiro: ['Beatriz', 'Marcio', 'Eliseu'],
         bacabal: ['Natalia', 'Tacilio', 'Demilson', 'Leonardo']
     };
     let currntUserName = ''; // Variável unificada para o usuário logado
@@ -5834,7 +5833,7 @@ Transporte - R$ 5,00"></textarea></div>
                                                 <div class="input-group"><label for="venda-${key}">📈 Venda (R$)</label><input type="text" id="venda-${key}" class="data-input" value="${formatToBRLInput(metasData.venda)}"></div>
                         <div class="input-group"><label for="p1-${key}">🔱 P1 50% (R$)</label><input type="text" id="p1-${key}" class="data-input" value="${formatToBRLInput(metasData.p1)}"></div>
                         <div class="input-group"><label for="meta-venda-remota-${key}">📲 Meta Venda Remota (R$)</label><input type="text" id="meta-venda-remota-${key}" class="data-input" value="${formatToBRLInput(metasData.metaVendaRemota)}"></div>
-                        <div class="input-group"><label for="seguro-${key}">🔧 Seguro</label><input type="number" id="seguro-${key}" class="data-input" value="${metasData.seguro || ''}"></div>
+                        <div class="input-group"><label for="seguro-${key}">🔧 Seguro (R$)</label><input type="text" inputmode="decimal" id="seguro-${key}" class="data-input" value="${formatToBRLInput(metasData.seguro)}"></div>
                         <div class="input-group"><label for="cartao-${key}">💳 Cartão</label><input type="number" id="cartao-${key}" class="data-input" value="${metasData.cartao || ''}"></div>
                         <div class="meta-group-title">Premiações 💰</div>
                         <div class="input-group"><label for="premio-p1p2-${key}">P1/P2 50% (R$)</label><input type="text" id="premio-p1p2-${key}" class="data-input" value="${formatToBRLInput(metasData.premioP1P2)}"></div>
@@ -5863,7 +5862,7 @@ Transporte - R$ 5,00"></textarea></div>
             const data = {
                 venda: parseFromBRLInput(document.getElementById(`venda-${key}`).value),
                 metaVendaRemota: parseFromBRLInput(document.getElementById(`meta-venda-remota-${key}`).value),
-                seguro: document.getElementById(`seguro-${key}`).value,
+                seguro: parseFromBRLInput(document.getElementById(`seguro-${key}`).value),
                 p1: parseFromBRLInput(document.getElementById(`p1-${key}`).value),
                 cartao: document.getElementById(`cartao-${key}`).value,
                 premioP1P2: parseFromBRLInput(document.getElementById(`premio-p1p2-${key}`).value),
@@ -5911,7 +5910,7 @@ Transporte - R$ 5,00"></textarea></div>
                     <p><strong>📈 VENDA:</strong> ${formatBRL(data.venda)}</p>
                     <p><strong>📡 V. REMOTA INDIVIDUAL:</strong> ${formatBRL(data.metaVendaRemota || 0)}</p>
                     ${managerMetasHtml}
-                    <p><strong>🔧 SEGURO:</strong> ${data.seguro || 0}</p>
+                    <p><strong>🔧 SEGURO (R$):</strong> ${formatBRL(data.seguro || 0)}</p>
                     <p><strong>🔱 P1 50%:</strong> ${formatBRL(data.p1)}</p>
                     <p><strong>💳 CARTÃO:</strong> ${data.cartao || 0}</p>
                     <br>
@@ -6543,7 +6542,7 @@ Transporte - R$ 5,00"></textarea></div>
                             <p>📈 VENDAS: ${formatBRL(data.vendas)}</p>
                             <p>🔱 P1/P2: ${formatBRL(data.p1p2)}</p>
                             <p>📲 V. REMOTA: ${formatBRL(data.vendaRemota || 0)}</p>
-                            <p>🔧 SEGURO: ${data.seguro || '0'}</p>
+                            <p>🔧 SEGURO: ${formatBRL(data.seguro || 0)}</p>
                             <p>💳 CARTÃO: ${data.cartao || '0'}</p>
                         </div>
                     `;
@@ -6608,7 +6607,7 @@ Transporte - R$ 5,00"></textarea></div>
                             <p>📈 VENDAS: ${formatBRL(data.vendas)}</p>
                             <p>🔱 P1/P2: ${formatBRL(data.p1p2)}</p>
                             <p>📲 V. REMOTA: ${formatBRL(data.vendaRemota || 0)}</p>
-                            <p>🔧 SEGURO: ${data.seguro || '0'}</p>
+                            <p>🔧 SEGURO: ${formatBRL(data.seguro || 0)}</p>
                             <p>💳 CARTÃO: ${data.cartao || '0'}</p>
                         </div>
                     `;
@@ -6667,7 +6666,7 @@ Transporte - R$ 5,00"></textarea></div>
 
                 const newVenda = parseFromBRLInput(document.getElementById(`closing-venda-${key}`).value);
                 const newP1P2 = parseFromBRLInput(document.getElementById(`closing-p1p2-${key}`).value);
-                const newSeguro = parseInt(document.getElementById(`closing-seguro-${key}`).value, 10) || 0;
+                const newSeguro = parseFromBRLInput(document.getElementById(`closing-seguro-${key}`).value);
                 const newCartao = parseInt(document.getElementById(`closing-cartao-${key}`).value, 10) || 0;
                 const newPrecoSite = parseFromBRLInput(document.getElementById(`closing-preco-site-${key}`).value);
                 const newVendaRemota = parseFromBRLInput(document.getElementById(`closing-venda-remota-${key}`).value);
@@ -6679,7 +6678,7 @@ Transporte - R$ 5,00"></textarea></div>
                 existingSales[key] = {
                     vendas: (parseFloat(currentData.vendas) || 0) + newVenda + newPrecoSite + newVendaRemota,
                     p1p2: (parseFloat(currentData.p1p2) || 0) + newP1P2,
-                    seguro: (parseInt(currentData.seguro) || 0) + newSeguro,
+                    seguro: (parseFloat(currentData.seguro) || 0) + newSeguro,
                     cartao: (parseInt(currentData.cartao) || 0) + newCartao,
                     vendaRemota: (parseFloat(currentData.vendaRemota) || 0) + newVendaRemota,
                 };
@@ -6798,7 +6797,7 @@ Transporte - R$ 5,00"></textarea></div>
                             <div class="input-group"><label for="correction-vendas-${key}">📈 VENDAS (R$)</label><input type="text" id="correction-vendas-${key}" class="data-input" value="${formatToBRLInput(salesData.vendas)}"></div>
                             <div class="input-group"><label for="correction-p1p2-${key}">🔱 P1/P2 (R$)</label><input type="text" id="correction-p1p2-${key}" class="data-input" value="${formatToBRLInput(salesData.p1p2)}"></div>
                             <div class="input-group"><label for="correction-venda-remota-${key}">📲 VENDA REMOTA (R$)</label><input type="text" id="correction-venda-remota-${key}" class="data-input" value="${formatToBRLInput(salesData.vendaRemota)}"></div>
-                            <div class="input-group"><label for="correction-seguro-${key}">🔧 SEGURO</label><input type="number" id="correction-seguro-${key}" class="data-input" value="${salesData.seguro || ''}"></div>
+                            <div class="input-group"><label for="correction-seguro-${key}">🔧 SEGURO (R$)</label><input type="text" inputmode="decimal" id="correction-seguro-${key}" class="data-input" value="${formatToBRLInput(salesData.seguro)}"></div>
                             <div class="input-group"><label for="correction-cartao-${key}">💳 CARTÃO</label><input type="number" id="correction-cartao-${key}" class="data-input" value="${salesData.cartao || ''}"></div>
                         </div>
                     `;
@@ -6867,7 +6866,7 @@ Transporte - R$ 5,00"></textarea></div>
                         dataToSave[key] = {
                 vendas: parseFromBRLInput(document.getElementById(`correction-vendas-${key}`).value),
                 p1p2: parseFromBRLInput(document.getElementById(`correction-p1p2-${key}`).value),
-                seguro: document.getElementById(`correction-seguro-${key}`).value || 0,
+                seguro: parseFromBRLInput(document.getElementById(`correction-seguro-${key}`).value),
                 cartao: document.getElementById(`correction-cartao-${key}`).value || 0,
                 vendaRemota: parseFromBRLInput(document.getElementById(`correction-venda-remota-${key}`).value),
             };
@@ -9668,7 +9667,7 @@ async function calculateAndDisplayStoreRanking() {
                             <h4>${name}</h4>
                             <div class="input-group"><label for="closing-venda-${key}">VENDA 📈</label><input type="text" inputmode="decimal" id="closing-venda-${key}" class="data-input" placeholder="0,00"></div>
                             <div class="input-group"><label for="closing-p1p2-${key}">P1/P2 🔱</label><input type="text" inputmode="decimal" id="closing-p1p2-${key}" class="data-input" placeholder="0,00"></div>
-                            <div class="input-group"><label for="closing-seguro-${key}">SEGURO 📝</label><input type="number" id="closing-seguro-${key}" class="data-input" placeholder="0"></div>
+                            <div class="input-group"><label for="closing-seguro-${key}">SEGURO 📝</label><input type="text" inputmode="decimal" id="closing-seguro-${key}" class="data-input" placeholder="0,00"></div>
                             <div class="input-group"><label for="closing-cartao-${key}">CARTÕES 💳</label><input type="number" id="closing-cartao-${key}" class="data-input" placeholder="0"></div>
                             <div class="input-group"><label for="closing-preco-site-${key}">PREÇO DE SITE 📡</label><input type="text" inputmode="decimal" id="closing-preco-site-${key}" class="data-input" placeholder="0,00"></div>
                             <div class="input-group"><label for="closing-venda-remota-${key}">VENDA REMOTA 📲</label><input type="text" inputmode="decimal" id="closing-venda-remota-${key}" class="data-input" placeholder="0,00"></div>
