--- a/index.html
+++ b/index.html
@@ -2569,6 +2569,8 @@
                     <div class="brand-button" data-brand="tecno">Tecno</div>
                     <div class="brand-button" data-brand="infinix">Infinix</div>
                     <div class="brand-button" data-brand="honor">Honor</div>
+                    <div class="brand-button" data-brand="samsung">Samsung</div>
+                    <div class="brand-button" data-brand="apple">Apple</div>
                 </div>
             </section>
 
@@ -3310,7 +3312,8 @@
                 <label for="mt-brand-filter">Filtrar por Marca</label>
                 <select id="mt-brand-filter" class="data-input">
                     <option value="" selected>Selecione uma marca...</option>
-                    <option value="apple">Apple</option> <!-- Adicionado -->
+                    <option value="apple">Apple</option>
+                    <option value="samsung">Samsung</option>
                     <option value="xiaomi">Xiaomi</option>
                     <option value="poco">Poco</option>
                     <option value="realme">Realme</option>
@@ -3343,7 +3346,8 @@
                     <label for="mt-add-brand">Marca</label>
                     <select id="mt-add-brand" class="data-input">
                         <option value="" disabled selected>Selecione a marca...</option>
-                        <option value="apple">Apple</option> <!-- Adicionado -->
+                        <option value="apple">Apple</option>
+                        <option value="samsung">Samsung</option>
                         <option value="xiaomi">Xiaomi</option>
                         <option value="poco">Poco</option>
                         <option value="realme">Realme</option>
@@ -3409,7 +3413,8 @@
                 <label for="device-brand">Marca</label>
                 <select id="device-brand" class="data-input">
                     <option value="" disabled selected>Selecione a marca...</option>
-                    <option value="apple">Apple</option> <!-- Adicionado -->
+                    <option value="apple">Apple</option>
+                    <option value="samsung">Samsung</option>
                     <option value="xiaomi">Xiaomi</option>
                     <option value="poco">Poco</option>
                     <option value="realme">Realme</option>
@@ -4250,7 +4255,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '3.4.4'; // Altere este número para atualizar a versão
+    const APP_VERSION = '3.4.6'; // Altere este número para atualizar a versão
     const GOOGLE_SHEET_API_URL = 'https://script.google.com/macros/s/AKfycbwrtULaONXOEjigQ5i9Tqnh1_Bnd0VIJJxBUy9qZgknwtm6FcGB0Dx2Ip-dMl_PyJ3Itg/exec';
 
     const CASH_BOX_INITIAL_VALUE = 1000;
